# This file is part of the Hercules-Helper project.
#
# (C) Copyright William R. Lewis, 2020-2023

# Changelog:
#
# Updated: 23 NOV 2023
# - add --prefix command line switch to set install dir for configure
#   this is a shortcut to avoid using a local config file
#
# Updated: 17 NOV 2023
# - add regina-links.txt with URLs to the Gists
# - make the --enable-custom configure option configurable
#   using new opt_custom_build_msg to config options
# - fix some little things in the config files
#
# Updated: 16 NOV 2023
# - move Regina-REXX source tarballs to GitHub Gists
#   don't rely on wrljet.com for these
# - use curl instead of wget to download the Regina tarballs from Gists
# - add curl to the required packages
#
# Updated: 14 NOV 2023
# - fix defaults for Regina in config files to not overwrite options
# - add new sdl-hyperion-freebsd-14.conf to use Regina 3.9.3
# - use -Wno-incompatible-funtion-pointer-types to Clang 16
#   Regina configure.
#
# Updated: 19 OCT 2023
# - add support for Raspberry Pi 5 Model B Rev 1.0
#   (hope it works, since I don't have one to test)
#
# Updated: 24 SEP 2023
# - add support for Oracle Linux (tested with 8.8)
#
# Updated: 23 SEP 2023
# - add support for Orange OS (Arch based), on Orange Pi Zero 2W board
#
# Updated: 11 SEP 2023
# - add libcap, libc6-compat, musl-locales, and procps for Alpine
#
# Updated: 19 AUG 2023
# - don't assume ARM is a Raspberry Pi in the Regina patch
# - prompt to quit if 'sudo' is missing and we'll probably need it
#
# Updated: 08 JUL 2023
# - add support for macOS 14 Sonoma
#
# Updated: 28 JUN 2023
# - corrections to default config files
#
# Updated: 27 JUN 2023
# - run 'sudo ldconfig' after installation, if --sudo is in effect
#
# Updated: 14 JUN 2023
# - move search for existing binaries to helper-find-existing-binaries.sh
#   for performance reasons. This can be extremely slow on some systems.
# - loosen up the tests for existing env var scripts in the shell profile
#
# Updated: 12 JUN 2023