@@ -5,6 +5,9 @@
 # Changelog:
 #
 # Updated: 23 NOV 2023
+# - display number of CPUs before running 'make check'
+#
+# Updated: 23 NOV 2023
 # - add --prefix command line switch to set install dir for configure
 #   this is a shortcut to avoid using a local config file
 #
